CSS do Material Table e Criando um Módulo App Material

--- a/frontend/src/app/courses/courses/courses.component.html
+++ b/frontend/src/app/courses/courses/courses.component.html
@@ -1,8 +1,8 @@
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
+<mat-card>
+  <mat-toolbar color="primary">
+    <span>Cursos Disponíveis</span>
+  </mat-toolbar>
+  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Curso </th>
@@ -18,4 +18,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</mat-card>
 
