--- a/frontend/src/app/courses/course-form/course-form.component.html
+++ b/frontend/src/app/courses/course-form/course-form.component.html
@@ -1,1 +1,18 @@
-<p>course-form works!</p>
+<mat-card class="course-form-card">
+  <mat-toolbar class="course-title" color="primary">Cadastrar novo curso</mat-toolbar>
+  <mat-card-content>
+    <form [formGroup]="form">
+      <mat-form-field class="full-width">
+        <input matInput formControlName="name" placeholder="Nome">
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <input matInput formControlName="category" placeholder="Categoria">
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="warn" (click)="onCancel()">Cancelar</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">Enviar</button>
+  </mat-card-actions>
+</mat-card>
