--- a/frontend/src/app/courses/course-form/course-form.component.html
+++ b/frontend/src/app/courses/course-form/course-form.component.html
@@ -6,8 +6,13 @@
         <input matInput formControlName="name" placeholder="Nome">
       </mat-form-field>
 
-      <mat-form-field class="full-width">
-        <input matInput formControlName="category" placeholder="Categoria">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Categorias</mat-label>
+        <mat-select formControlName="category">
+          <mat-option value="null"> </mat-option>
+          <mat-option value="1">Front-end</mat-option>
+          <mat-option value="2">Back-end</mat-option>
+        </mat-select>
       </mat-form-field>
     </form>
   </mat-card-content>
