--- a/frontend/src/app/courses/containers/courses/courses.component.html
+++ b/frontend/src/app/courses/containers/courses/courses.component.html
@@ -4,7 +4,11 @@
   </mat-toolbar>
 
   <div class="mat-elevation-z8 colum-flex">
-    <app-courses-list *ngIf="courses$ | async as courses; else loading" [courses]="courses">
+    <app-courses-list
+      *ngIf="courses$ | async as courses; else loading"
+      [courses]="courses"
+      (add)="onAdd()"
+    >
     </app-courses-list>
 
     <ng-template #loading>
